dockerbuild/deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp
    spec:
      containers:
      - image: quay.io/dbais76/webapp:latest
        name: webapp
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp
  name: webapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  host: webapp-daleepbais-dev.apps.sandbox-m4.g2pi.p1.openshiftapps.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: webapp
    weight: 100
  wildcardPolicy: None
