dockerbuild/deploy/route-webapp.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  host: webapp-daleepbais-dev.apps.sandbox-m4.g2pi.p1.openshiftapps.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: webapp
    weight: 100
  wildcardPolicy: None
